app-deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankapp
      version: blue
  template:
    metadata:
      labels:
        app: bankapp
        version: blue
    spec:
      containers:
      - name: bankapp
        image: nandkishor986/bank_app:blue # Adjust the image tag for the blue version
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
