app-deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankapp
      version: green
  template:
    metadata:
      labels:
        app: bankapp
        version: green
    spec:
      containers:
      - name: bankapp
        image: nandkishor986/bank_app:green # Adjust the image tag for the green version
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
