bankapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: webapps
spec:
  selector:
    app: bankapp
    version: blue # this can be changed to green when switching traffoc.
  ports:
    - port: 80            # ALB hits this
      targetPort: 30585   # Pod container port
